--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,9 @@ dist.jar=${dist.dir}/PredictionModel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.poi-3.11-20141221.jar=C:\\Users\\Andrea Rosales\\Documents\\NetBeansProjects\\poi-3.11\\poi-3.11-20141221.jar
 includes=**
-jar.compress=false
-javac.classpath=\
-    ${file.reference.poi-3.11-20141221.jar}
+jar.compress=true
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
